fix contact portal and scrollbar styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,24 @@
   margin: 0;
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #313131;
+}
+
+
+*::-webkit-scrollbar-thumb {
+  background-color: #dfdfdf77;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+  background-color: #dfdfdfee;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -86,6 +104,7 @@ body {
 }
 
 body {
+  position: relative;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
